# CP465-Text-Mining---AI-Search-Engine

./: .example.env  .gitignore  README.md  api.py  config.example.json  config.json  db.py  docker-compose.yml  embedder.py  engine.py  env.example  pyproject.toml  requirements.txt  summarizer.py  test_case.json  test_cases.json
app/embedding/: __main__.py  config.py  main.py  requirements.txt  worker_main.py
app/embedding/adapters/: bge_embedder.py  ollama_embedder.py  postgres_chunk_repo.py  postgres_search_repo.py  rabbitmq_consumer.py
app/embedding/application/: embed_chunk.py  expand_query.py  search.py
app/embedding/domain/: chunk.py  events.py
app/embedding/infrastructure/: container.py
app/embedding/ports/: chunk_repository.py  embedder.py  search_repository.py
app/evaluation/: __main__.py  domain.py  main.py  requirement.txt
app/evaluation/adapters/: reporter.py  test_case_loader.py
app/evaluation/application/: rag_eval.py  retrieval_eval.py
app/evaluation/infrastructure/: container.py
app/prototype/: api.py  chunker.py  cli.py  engine.py  summarizer.py
app/prototype/documents/: addtionalNote.md
documents/: README.md  addtionalNote.md
src/crawlerapp/: __main__.py  config.json  config.py  main.py
src/crawlerapp/adapters/: bge_embedder.py  postgres_chunk_repo.py  postgres_search_repo.py  (+1 more)
src/embedder/: __main__.py  api.py  config.py  embedder.py  main.py  worker.py
src/embedding/: __main__.py  main.py  worker_main.py
src/prototype/: api.py  chunker.py  cli.py  db.py  engine.py  searcher.py  summarizer.py  test.py
(+26 files in other folders)
